fix scrollbars, padding

--- a/src/calendarBookingForm/Components/TimeSlotList.scss
+++ b/src/calendarBookingForm/Components/TimeSlotList.scss
@@ -1,3 +1,7 @@
+.AvailabilityPage-TimeSlotContainer {
+    padding: 0 1.5rem;
+}
+
 .TimeSlot-DateSelected{
     text-align: center;
     display: block;
@@ -34,8 +38,7 @@
 .SelectedDateContainer {
     position: relative;
     height: 100%;
-    overflow-y: scroll;
-    margin-left: 1.5rem;
+    overflow-y: auto;
 }
 
 .SelectedDateContainer > .TimeSlots {
@@ -52,7 +55,7 @@
 
 @media only screen and (min-width: 320px) and (max-width: 767px) {
     .AvailabilityPage-TimeSlotContainer {
-        margin: 1rem 0 1rem 0;
+        margin: 1rem 0;
     }
 
     .TimeSlot-DateSelected {
