--- a/src/calendarBookingForm/Components/VariantList.scss
+++ b/src/calendarBookingForm/Components/VariantList.scss
@@ -1,5 +1,5 @@
 .VariantContainer{
-    padding: 2rem 0 2rem 1.5rem;
+    padding: 2rem 0;
     overflow: auto;
 }
 .VariantListTotal-Grid{
